gcc/testsuite/rust/rustc/ui/dotdotdot-expr.rs
fn main() {
    let _redemptive = 1...21;
// { dg-error "" "" { target *-*-* } .-1 }
}

